# undb-logistica-ma-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
benchmarks/: __init__.py  run_benchmarks.py
data/: benchmark_cases_snapshot.csv  benchmark_real_case_snapshot.json
data/demo/: logistica_ma_demo.csv
docs/: report.aux  report.out  report.tex
docs/plans/: 2026-03-02-logistica-ma-design.md  2026-03-02-relatorio-design.md
public/: index.html
src/logisticama/: __init__.py
src/logisticama/adapters/ingest/: __init__.py  loaders.py
src/logisticama/adapters/persistence/: indexed_repository.py
src/logisticama/adapters/presentation/: theme.py
src/logisticama/application/: benchmarking.py  datasets.py  dto.py  use_cases.py
src/logisticama/domain/: entities.py  ports.py
src/logisticama/shared/: normalization.py  time_utils.py
tests/: test_dataset_adherence.py  test_indexed_repository.py
