[project]
name = "logistica-ma-analytics"
version = "0.1.0"
description = "Dashboard e motor analitico para consultas logisticas com indices em memoria."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.3.3",
  "pandas>=2.3.2",
  "plotly>=6.3.0",
  "streamlit>=1.49.1",
]

[dependency-groups]
dev = [
  "pypdf>=6.7.5",
  "pytest>=8.4.2",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logisticama"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
